--- a/src/components/nav-bar.css
+++ b/src/components/nav-bar.css
@@ -177,7 +177,4 @@
     width: 36px;
     height: 36px;
   }
-  .nav-bar-mobile-menu {
-    padding: var(--dl-space-space-unit);
-  }
 }
