--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
   --dl-color-theme-secondary1: #ffffff;
   --dl-color-theme-secondary2: #fff3ed;
   --dl-space-space-threeunits: 48px;
-  --dl-color-theme-neutral-dark: #434375ff;
+  --dl-color-theme-neutral-dark: #434375;
   --dl-radius-radius-cardradius: 8px;
   --dl-radius-radius-imageradius: 8px;
   --dl-radius-radius-inputradius: 24px;
